--- a/index.html
+++ b/index.html
@@ -483,6 +483,7 @@
                 <div class="obra-card">
                     <div class="obra-title">Summa Theologica</div>
                     <p>Su obra maestra, un manual completo de teología organizado según el esquema: Dios en sí mismo, el movimiento de las creaturas hacia Dios, y Cristo como camino de retorno a Dios.</p>
+                    <li><a href="https://hjg.com.ar/sumat/index.html" target="_blank">Suma Teológica (traducción al español por P. Derisi)</a></li>
                 </div>
                 <div class="obra-card">
                     <div class="obra-title">Summa contra Gentiles</div>
