--- a/index.html
+++ b/index.html
@@ -488,6 +488,7 @@
                 <div class="obra-card">
                     <div class="obra-title">Summa contra Gentiles</div>
                     <p>Apología racional del cristianismo dirigida especialmente contra los filósofos árabes, demostrando la compatibilidad entre razón y fe.</p>
+                    <li><a href="https://tomasdeaquino.org/suma-contra-gentiles/" target="_blank">Suma Teológica (traducción al español por P. Derisi)</a></li>
                 </div>
                 <div class="obra-card">
                     <div class="obra-title">Comentarios a Aristóteles</div>
