añado metafisica resumen

--- a/cinco_vias.html
+++ b/cinco_vias.html
@@ -1,9 +1,9 @@
-
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Las Cinco Vías de Santo Tomás de Aquino</title>
   <style>
     body {
@@ -100,6 +100,7 @@
     }
   </style>
 </head>
+
 <body>
 
   <header>
@@ -112,11 +113,14 @@
     <section>
       <h2>Resumen de las Cinco Vías</h2>
       <ol>
-        <li><strong>Movimiento:</strong> Todo lo que se mueve es movido por otro. Debe haber un Primer Motor Inmóvil: Dios.</li>
+        <li><strong>Movimiento:</strong> Todo lo que se mueve es movido por otro. Debe haber un Primer Motor Inmóvil:
+          Dios.</li>
         <li><strong>Causa eficiente:</strong> Nada es causa de sí mismo. Debe existir una Causa Primera: Dios.</li>
         <li><strong>Posible y necesario:</strong> No todo puede ser contingente. Debe haber un ser necesario: Dios.</li>
-        <li><strong>Grados de perfección:</strong> Existen grados en los seres. Debe existir un ser sumamente perfecto: Dios.</li>
-        <li><strong>Orden del mundo:</strong> Las cosas obran con orden hacia un fin. Debe haber una inteligencia rectora: Dios.</li>
+        <li><strong>Grados de perfección:</strong> Existen grados en los seres. Debe existir un ser sumamente perfecto:
+          Dios.</li>
+        <li><strong>Orden del mundo:</strong> Las cosas obran con orden hacia un fin. Debe haber una inteligencia
+          rectora: Dios.</li>
       </ol>
     </section>
 
@@ -125,7 +129,9 @@
       <div class="infografia">
         <div class="via">
           <div class="icono">
-            <svg viewBox="0 0 24 24" fill="#3498db"><path d="M12 2a10 10 0 100 20 10 10 0 000-20zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"/></svg>
+            <svg viewBox="0 0 24 24" fill="#3498db">
+              <path d="M12 2a10 10 0 100 20 10 10 0 000-20zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z" />
+            </svg>
           </div>
           <div class="via-content">
             <h3>1. Movimiento</h3>
@@ -135,7 +141,10 @@
 
         <div class="via">
           <div class="icono">
-            <svg viewBox="0 0 24 24" fill="#3498db"><path d="M12 8a4 4 0 100 8 4 4 0 000-8zm10 4a8.2 8.2 0 00-.3-2l2-1.5-2-3.5-2.3 1a8.2 8.2 0 00-2-1.2L17 2h-4l-.5 2.3a8.2 8.2 0 00-2 1.2L8.2 3 6 6.5 8 8a8.2 8.2 0 000 4l-2 1.5 2 3.5 2.3-1a8.2 8.2 0 002 1.2L10 22h4l.5-2.3a8.2 8.2 0 002-1.2l2.3 1 2-3.5-2-1.5a8.2 8.2 0 00.2-2z"/></svg>
+            <svg viewBox="0 0 24 24" fill="#3498db">
+              <path
+                d="M12 8a4 4 0 100 8 4 4 0 000-8zm10 4a8.2 8.2 0 00-.3-2l2-1.5-2-3.5-2.3 1a8.2 8.2 0 00-2-1.2L17 2h-4l-.5 2.3a8.2 8.2 0 00-2 1.2L8.2 3 6 6.5 8 8a8.2 8.2 0 000 4l-2 1.5 2 3.5 2.3-1a8.2 8.2 0 002 1.2L10 22h4l.5-2.3a8.2 8.2 0 002-1.2l2.3 1 2-3.5-2-1.5a8.2 8.2 0 00.2-2z" />
+            </svg>
           </div>
           <div class="via-content">
             <h3>2. Causa Eficiente</h3>
@@ -145,7 +154,9 @@
 
         <div class="via">
           <div class="icono">
-            <svg viewBox="0 0 24 24" fill="#3498db"><path d="M12 2L1 21h22L12 2zm0 3.84L19.53 19H4.47L12 5.84z"/></svg>
+            <svg viewBox="0 0 24 24" fill="#3498db">
+              <path d="M12 2L1 21h22L12 2zm0 3.84L19.53 19H4.47L12 5.84z" />
+            </svg>
           </div>
           <div class="via-content">
             <h3>3. Ser Necesario</h3>
@@ -155,7 +166,9 @@
 
         <div class="via">
           <div class="icono">
-            <svg viewBox="0 0 24 24" fill="#3498db"><path d="M12 2l2.9 6.1L22 9.2l-5 4.9L18.3 22 12 18.3 5.7 22 7 14.1 2 9.2l7.1-1.1L12 2z"/></svg>
+            <svg viewBox="0 0 24 24" fill="#3498db">
+              <path d="M12 2l2.9 6.1L22 9.2l-5 4.9L18.3 22 12 18.3 5.7 22 7 14.1 2 9.2l7.1-1.1L12 2z" />
+            </svg>
           </div>
           <div class="via-content">
             <h3>4. Grados de Perfección</h3>
@@ -165,7 +178,10 @@
 
         <div class="via">
           <div class="icono">
-            <svg viewBox="0 0 24 24" fill="#3498db"><path d="M10 2H6a1 1 0 00-1 1v4h2V4h3a1 1 0 000-2zm8 20h-4a1 1 0 000 2h4a1 1 0 001-1v-4h-2v3zM4 13h16v-2H4v2z"/></svg>
+            <svg viewBox="0 0 24 24" fill="#3498db">
+              <path
+                d="M10 2H6a1 1 0 00-1 1v4h2V4h3a1 1 0 000-2zm8 20h-4a1 1 0 000 2h4a1 1 0 001-1v-4h-2v3zM4 13h16v-2H4v2z" />
+            </svg>
           </div>
           <div class="via-content">
             <h3>5. Orden del Mundo</h3>
@@ -178,13 +194,22 @@
     <section>
       <h2>Lecturas recomendadas</h2>
       <ul>
-        <li><a href="https://www.sacred-texts.com/chr/aquinas/summa/index.htm" target="_blank">Summa Theologiae (en inglés, Sacred Texts)</a></li>
-        <li><a href="https://hjg.com.ar/sumat/index.html" target="_blank">Suma Teológica (traducción al español por P. Derisi)</a></li>
-        <li><a href="https://www.corpusthomisticum.org/sth.html" target="_blank">Corpus Thomisticum (texto latino completo)</a></li>
+        <li><a href="https://www.sacred-texts.com/chr/aquinas/summa/index.htm" target="_blank">Summa Theologiae (en
+            inglés, Sacred Texts)</a></li>
+        <li><a href="https://hjg.com.ar/sumat/index.html" target="_blank">Suma Teológica (traducción al español por P.
+            Derisi)</a></li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>Metafísica</h2>
+      <ul>
+        <li><a href="metafisica_tomas.html" target="_blank">Resumen de la Metafísica de Santo Tomás de Aquino</a></li>
       </ul>
     </section>
 
   </div>
 
 </body>
+
 </html>
