feat: Añadir enlace a Metafísica en la página principal
Se ha añadido un enlace en la sección "Metafísica" de la página principal (`index.html`) que dirige a `metafisica_tomas.html`.

Esto permite a los usuarios acceder directamente a la página con información detallada sobre la metafísica de Tomás de Aquino desde la sección correspondiente del `index`.

--- a/index.html
+++ b/index.html
@@ -371,6 +371,19 @@
             <p>La doctrina del "esse" (ser/existir) como acto de todos los actos constituye el núcleo de su metafísica. Estableció también la analogía del ser, según la cual el concepto de ser se predica de manera análoga de Dios y las creaturas, evitando tanto el univocismo como el equivocismo.</p>
 
             <p>Esta innovación permitió mantener tanto la trascendencia divina como la posibilidad de un conocimiento verdadero de Dios a partir de las creaturas, fundamentando así toda su teología natural.</p>
+            <div style="text-align: center; margin-top: 20px;">
+                <a href="metafisica_tomas.html" target="_blank" style="
+                    display: inline-block;
+                    background: linear-gradient(135deg, #667eea, #764ba2);
+                    color: white;
+                    padding: 10px 20px;
+                    border-radius: 25px;
+                    text-decoration: none;
+                    font-weight: bold;
+                    box-shadow: 0 4px 10px rgba(102, 126, 234, 0.3);
+                    transition: background 0.3s ease;
+                ">Ver más sobre Metafísica de Tomás</a>
+            </div>
         </section>
 
         <section id="teologia" class="section">
