--- a/index.html
+++ b/index.html
@@ -545,6 +545,22 @@
             <p>Su influencia perdura no solo en la tradición católica, sino en el conjunto de la cultura occidental, habiendo contribuido decisivamente a la formación del pensamiento europeo en áreas tan diversas como la metafísica, la ética, la teoría política y la filosofía del derecho.</p>
 
             <p>Su método de síntesis y su confianza en la capacidad de la razón para alcanzar verdades fundamentales sobre la realidad continúan siendo relevantes para el diálogo interdisciplinario actual, ofreciendo un modelo de integración del saber que trasciende las fragmentaciones académicas contemporáneas.</p>
+
+            <!-- Botón solicitado: abre SantoTomas_De_Aquino.html en nueva pestaña -->
+            <div style="text-align:center; margin-top:20px;">
+                <a href="SantoTomas_De_Aquino.html" target="_blank" rel="noopener noreferrer"
+                   style="display:inline-block;
+                          background:linear-gradient(135deg, #667eea, #764ba2);
+                          color:#fff;
+                          padding:12px 26px;
+                          border-radius:30px;
+                          text-decoration:none;
+                          font-weight:bold;
+                          box-shadow:0 6px 18px rgba(102,126,234,0.35);
+                          transition:transform 0.15s ease;">
+                    Ver detalle de su pensamiento
+                </a>
+            </div>
         </section>
 
         <section class="section">
