--- a/index.html
+++ b/index.html
@@ -548,7 +548,7 @@
 
             <!-- Botón solicitado: abre SantoTomas_De_Aquino.html en nueva pestaña -->
             <div style="text-align:center; margin-top:20px;">
-                <a href="Santo_Tomas_De_Aquino.html" target="_blank" rel="noopener noreferrer"
+                <a href="Santo_Tomas_de_Aquino.html" target="_blank" rel="noopener noreferrer"
                    style="display:inline-block;
                           background:linear-gradient(135deg, #667eea, #764ba2);
                           color:#fff;
